# Monitor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  main.cpp
src/controller/: HomeController.cpp  HomeController.h
src/model/: Configuration.h  Node.h  NodeManager.h  PollerDaemon.cpp  PollerDaemon.h
src/ui/: Edisense.ui  HomeView.cpp  HomeView.h  NodeViewModel.h  ui_Edisense.h
